--- a/src/app/component/add-course/add-course.component.html
+++ b/src/app/component/add-course/add-course.component.html
@@ -1,15 +1,15 @@
-<form (ngSubmit)="addCourse()">
+<form class="update-course" (ngSubmit)="addCourse()">
   <div class="form-group">
     <label for="courseName">Course Name</label>
-    <input type="text" class="form-control" id="courseName" [(ngModel)]="course.courseName" name="courseName" required>
+    <input type="text" class="form-control" id="courseName" placeholder=" e.g. Programming Languages" [(ngModel)]="course.courseName" name="courseName" required>
   </div>
   <div class="form-group">
     <label for="courseCode">Course Code</label>
-    <input type="text" class="form-control" id="courseCode" [(ngModel)]="course.courseCode" name="courseCode" required>
+    <input type="text" class="form-control"  placeholder="e.g. PROG8521" id="courseCode" [(ngModel)]="course.courseCode" name="courseCode" required>
   </div>
   <div class="form-group">
     <label for="courseCredit">Course Credit</label>
-    <input type="text" class="form-control" id="courseCredit" [(ngModel)]="course.courseCredit" name="courseCredit" required>
+    <input type="text" class="form-control" id="courseCredit"  placeholder="4" [(ngModel)]="course.courseCredit" name="courseCredit" required>
   </div>
   <button type="submit" class="btn btn-primary">Add Course</button>
 </form>
